# neptune-tauri

./: .prettierignore  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  windi.config.ts
@types/: global.d.ts
src/: App.tsx  index.tsx  preload.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/src/: main.rs
src/assets/styles/: main.scss
src/components/: Button.tsx  FileDrop.tsx  Img.tsx  Loader.tsx  Menu.tsx  PlaylistForm.tsx  PlaylistItem.tsx  Playlists.tsx  ScrollContainer.tsx  SlidePanel.tsx  SortableList.tsx  Sprite.tsx
src/components/player/: AudioPlayer.tsx  Player.tsx  Volume.tsx
src/pages/: Playlist.tsx
src/store/: _state.ts  index.tsx
src/store/menu/: _state.ts  index.ts
src/store/notifications/: index.ts
src/store/player/: _state.ts  index.ts
src/store/playlists/: _state.ts  index.ts
src/store/prompt/: index.ts
src/utils/: helpers.ts
