[package]
name = "app"
version = "0.1.0"
description = "Music player"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
serde_json = "1.0.128"
serde = { version = "1.0.210", features = ["derive"] }
tauri = { version = "1.5.4", features = [] }
walkdir = "2"
mime_guess = "2.0.5"
symphonia-metadata = "0.5.4"
audiotags = "0.5.0"
uuid = "1.10.0"
base64 = "0.22.1"

[features]
custom-protocol = [ "tauri/custom-protocol" ]
